# D2Hub

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SConstruct
.github/workflows/: build_and_publish_when_tag_added.yml  build_main_or_release_when_changed.yml  build_main_when_changed.yml
cmake/: AssertFileExists.cmake  DownloadGodotEditor.cmake  DownloadGodotTemplates.cmake
frontend/: .gitignore  achievement_detail.tscn  achievement_view.tscn  achievements.tscn  main.tscn  project.godot
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  gdexample.cpp  gdexample.h  register_types.cpp
src/backend/binding/: achievement.cpp  achievement.h  achievements_module.cpp  achievements_module.h  backup_module.cpp  backup_module.h  constants.h  d2hub_backend.cpp  d2hub_backend.h  developer_control.cpp  developer_control.h  developer_module.cpp  developer_module.h  gdexample.cpp  gdexample.h  log_view.cpp  log_view.h  notifier.cpp  notifier.h  register_types.cpp  register_types.h
src/backend/binding/modules/: achievements_module.cpp  achievements_module.h  backup_module.cpp  backup_module.h  bestiary_module.cpp  bestiary_module.h  developer_module.cpp  developer_module.h  lootfilter_module.cpp  lootfilter_module.h  module.cpp  module.h  statistics_module.cpp  statistics_module.h
src/backend/d2/achievements/: achievements.cpp  achievements.h  base.h  utilities.cpp  utilities.h
src/backend/d2/achievements/achievements/act1/: andariel_no_hit.h  andariel_no_leave.h  blood_raven_walk_distance.h  countess_gold_steal.h  leoric_last.h  smith_high_health.h  speedrun.h  test_persistance.h  tristram_clear.h
src/backend/d2/achievements/achievements/act5/: shenk_.h  speedrun.h
src/backend/d2/achievements/achievements/dungeons/easy/: akarat_let_heal_and_kill.cpp  akarat_let_heal_and_kill.h  binding_of_baal_kill_at_most_4_minions.cpp  binding_of_baal_kill_at_most_4_minions.h  death_projector_high_health.cpp  death_projector_high_health.h  horazons_sanctum_no_portal_kill_have_10_portals.cpp  horazons_sanctum_no_portal_kill_have_10_portals.h  horror_under_tristram_kill_with_only_magic_items.cpp  horror_under_tristram_kill_with_only_magic_items.h  invasion_run_10_laps_around.h  invasion_stand_longer_than_moving.cpp
src/backend/d2/achievements/achievements/dungeons/extreme/: andariel_no_hit.h  the_void_kill_inarius_before_lilith.cpp  the_void_kill_inarius_before_lilith.h  the_void_kill_lilith_before_inarius.cpp  the_void_kill_lilith_before_inarius.h
src/backend/d2/achievements/achievements/dungeons/hard/: banisher_of_light_no_quick_teleports.cpp  banisher_of_light_no_quick_teleports.h  toraja_max_5_edyrem.cpp  toraja_max_5_edyrem.h
src/backend/d2/achievements/achievements/dungeons/moderate/: black_road_no_minion_in_circle.cpp  black_road_no_minion_in_circle.h  bull_prince_rodeo_high_roll_charm.cpp  bull_prince_rodeo_high_roll_charm.h  heart_of_sin_negative_fire_res.cpp  heart_of_sin_negative_fire_res.h  legacy_of_blood_kill_after_death.cpp  legacy_of_blood_kill_after_death.h  the_veiled_prophet_destroy_orb_in_5_seconds.cpp  the_veiled_prophet_destroy_orb_in_5_seconds.h
src/backend/d2/achievements/achievements/dungeons/very_easy/: death_projector_high_health.cpp  death_projector_high_health.h
src/backend/d2/achievements/achievements/dungeons/very_hard/: lord_of_lies_kill_only_the_real_one.cpp  lord_of_lies_kill_only_the_real_one.h  xazax_start_at_15_kill_before_30_pentients.cpp  xazax_start_at_15_kill_before_30_pentients.h  yshari_sanctum_no_miss_valthek.cpp  yshari_sanctum_no_miss_valthek.h
src/backend/d2/achievements/achievements/rifts/easy/: island_of_the_sunless_sea_gold_farm.cpp  island_of_the_sunless_sea_gold_farm.h  the_secret_cow_level_peaceful_gathering.cpp  the_secret_cow_level_peaceful_gathering.h
src/backend/d2/achievements/achievements/rifts/moderate/: kurast_3000ba_kill_all_totems_timed.cpp  kurast_3000ba_kill_all_totems_timed.h  tran_athulua_kill_all_priestesses_simultaneously.cpp  tran_athulua_kill_all_priestesses_simultaneously.h
src/backend/d2/utilities/: data.cpp  data.h  loaded_data.cpp  loaded_data.h  raw.h  setup.cpp  setup.h  stats.h  utilities.cpp  utilities.h  zone.h
src/backend/plugin/: external_plugin.h  tmp_mxl_plugin.cpp
src/frontend/: .gitignore  achievement_detail.gd  achievement_detail.tscn  achievement_screen.gd  achievement_screen.tscn  achievement_view.gd  achievement_view.tscn  conditions_view.gd  conditions_view.tscn  custom_item_ids.txt  custom_minion_ids.txt  custom_stat_ids.txt  developer_screen.gd  developer_screen.tscn  donate.tscn  export_presets.cfg  gd_example.gd  gd_example.tscn  icon.svg.import  item_ids.txt  main_scene.gd  main_scene.tscn  project.godot  settings_screen.gd  settings_screen.tscn  splash_screen.gd  splash_screen.tscn  stat_ids.txt  warning_screen.tscn
src/frontend/addons/auto_complete_menu_node/: complete_plugin.gd  example_terms_file.json  plugin.cfg
src/frontend/assets/: bug_report.png.import  discord.png.import  donate.png.import  github.png.import  gul_rune.png.import  gul_rune_gray.png.import
src/frontend/globals/: app.gd  backend.gd
src/frontend/modules/: module_page.gd  module_page.tscn  module_status.gd  module_status.tscn  module_status_old.tscn
src/frontend/modules/achievements/: achievement_detail.gd  achievement_detail.tscn  achievement_overlay.gd  achievement_overlay.tscn  achievement_screen.gd  achievement_screen.tscn  achievement_view.gd  achievement_view.tscn  achievements.gd  achievements.tscn  conditions_view.gd  (+1 more)
src/frontend/overlay/: overlay.gd  overlay.tscn  overlay_panel.gd  overlay_panel.tscn
src/frontend/screens/: module_status.gd  module_status.tscn
src/frontend/settings/: constants.gd  settings_screen.gd  settings_screen.tscn
src/frontend/utils/: bug_report_button.tscn  discord_button.gd  discord_button.tscn  donate_button.tscn  github_button.tscn  message_popup.gd  message_popup.tscn  open_link_button.gd  open_link_button.tscn  splash_screen.gd  splash_screen.tscn  update_checker.gd  update_checker.tscn  utils.gd  warning_screen.gd  warning_screen.tscn
(+94 files in other folders)
